BPER/DEVF/force-app/main/default/objects/CH_Claims__c/CH_Claims__c.object-meta.xml
<CustomObject>
    <label>CH - Reclami</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CH - Reclami</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CH - Reclami</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>