BPER/DEVF/force-app/main/default/objects/CH_Claims__c/fields/CRM_Account__c.field-meta.xml
<CustomField>
    <fullName>CRM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CH - Reclami</relationshipLabel>
    <relationshipName>CH_Reclami</relationshipName>
    <type>Lookup</type>
</CustomField>