BPER/DEVF/force-app/main/default/objects/CH_Claims__c/fields/CRM_DataEvento__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataEvento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Evento</label>
    <type>Date</type>
</CustomField>