BPER/DEVF/force-app/main/default/objects/CH_Claims__c/fields/CRM_DataRicezione__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataRicezione__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Ricezione</label>
    <type>Date</type>
</CustomField>