BPER/DEVF/force-app/main/default/objects/CH_Claims__c/fields/CRM_DateOpened__c.field-meta.xml
<CustomField>
    <fullName>CRM_DateOpened__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Esitazione</label>
    <type>Date</type>
</CustomField>