BPER/DEVF/force-app/main/default/objects/CH_Claims__c/fields/CRM_IDProtocolloReclamo__c.field-meta.xml
<CustomField>
    <fullName>CRM_IDProtocolloReclamo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID Protocollo Reclamo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>