BPER/DEVF/force-app/main/default/objects/CH_Claims__c/fields/CRM_Reason__c.field-meta.xml
<CustomField>
    <fullName>CRM_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>