BPER/DEVF/force-app/main/default/objects/CH_Claims__c/fields/CRM_Status__c.field-meta.xml
<CustomField>
    <fullName>CRM_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Esito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>